2013-05-06  Doug Evans  <dje@google.com>

	* gdb.reverse/shr.h: New file.
	* gdb.reverse/shr1.c: New file.
	* gdb.reverse/shr2.c: #include "shr.h".
	* gdb.reverse/solib-reverse.c: Remove #include <stdio.h>.
	#include "shr.h".  Replace calls to printf,sleep to call shr1 instead.
	* gdb.reverse/solib-precsave.exp: Build shr2.sl.
	Update tests using sleep/printf to use shr2.sl instead.
	* gdb.reverse/solib-reverse.exp: Ditto.

2013-05-06  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/implptrconst.c: New file.
	* gdb.dwarf2/implptrconst.exp: New file.
	* lib/dwarf.exp (Dwarf::_nz_quote): New proc.
	(Dwarf::_handle_DW_FORM): Handle DW_FORM_block1.
	(Dwarf::_location): Handle DW_OP_GNU_implicit_pointer.

2013-05-03  Philippe Waroquiers  <philippe.waroquiers@skynet.be>

	* gdb.base/catch-sig.c (main): Raise SIGINT.
	* gdb.base/catch-sig.exp: Test "catch signal SIGINT".

2013-05-03  Hafiz Abid Qadeer  <abidh@codesourcery.com>

	* status-stop.exp (test_tstart_tstart): Check for error
	returned by the second 'tstart' command.

2013-03-27  Walfred Tedeschi  <walfred.tedeschi@intel.com>

	* gdb.xml/maint_print_struct.exp: New file.
	* gdb.xml/maint_print_struct.xml: New file.

2013-04-25  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/nostaticblock.exp: New file.

2013-04-24  Muhammad Bilal  <mbilal@codesourcery.com>

	PR gdb/10462
	* gdb.base/setshow.exp: Add test case.

2013-04-23  Hui Zhu  <hui@codesourcery.com>

	PR gdb/15293
	* gdb.base/dprintf.exp: Add ignore command.

2013-04-23  Hui Zhu  <hui@codesourcery.com>

	PR gdb/15165
	* gdb.base/save-bp.exp: Add test for dprintf.

2013-04-22  Tom Tromey  <tromey@redhat.com>

	* gdb.gdb/selftest.exp (do_steps_and_nexts): Check for
	notice_open_fds.

2013-04-22  Sergio Durigan Junior  <sergiodj@redhat.com>

	* gdb.arch/arm-bl-branch-dest.exp: Replace additional_flags by
	ldflags.

2013-04-22  Sergio Durigan Junior  <sergiodj@redhat.com>

	* gdb.arch/arm-bl-branch-dest.c: New file.
	* gdb.arch/arm-bl-branch-dest.exp: Likewise.
