@@ -128,8 +128,8 @@ for {set i 0} {$i < 32} {incr i 1} {
 # later when loading the core file (i.e., different register values for different
 # vector register banks).
 
-set core_supported [gdb_gcore_cmd "${objdir}/${subdir}/vsx-core.test" \
-			"Save a VSX-enabled corefile"]
+set corefile "${objdir}/${subdir}/vsx-core.test"
+set core_supported [gdb_gcore_cmd "$corefile" "Save a VSX-enabled corefile"]
 
 # Now run the F32~F63/VR0~VR31 tests.
 
@@ -168,31 +168,10 @@ gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
 
-gdb_test_multiple "core ${objdir}/${subdir}/vsx-core.test" \
-	"re-load generated corefile" \
-{
-    -re ".* is not a core dump:.*$gdb_prompt $" {
-	fail "re-load generated corefile (bad file format)"
-	# No use proceeding from here.
-	return;
-    }
-    -re ".*: No such file or directory.*$gdb_prompt $" {
-	fail "re-load generated corefile (file not found)"
-	# No use proceeding from here.
-	return;
-    }
-    -re ".*Couldn't find .* registers in core file.*$gdb_prompt $" {
-	fail "re-load generated corefile (incomplete note section)"
-    }
-    -re "Core was generated by .*$gdb_prompt $" {
-	pass "re-load generated corefile"
-    }
-    -re ".*$gdb_prompt $" {
-	fail "re-load generated corefile"
-    }
-    timeout {
-	fail "re-load generated corefile (timeout)"
-    }
+set core_loaded [gdb_core_cmd "$corefile" "re-load generated corefile"]
+if { $core_loaded == -1 } {
+    # No use proceeding from here.
+    return
 }
 
 for {set i 0} {$i < 32} {incr i 1} {
