@@ -85,8 +85,8 @@ set pre_corefile_local_array \
 set pre_corefile_extern_array \
 	[capture_command_output "print extern_array" "$print_prefix"]
 
-set core_supported [gdb_gcore_cmd "${objdir}/${subdir}/gcore.test" \
-			"save a corefile"]
+set corefile "${objdir}/${subdir}/gcore.test"
+set core_supported [gdb_gcore_cmd "$corefile" "save a corefile"]
 if {!$core_supported} {
   return -1
 }
@@ -97,24 +97,10 @@ gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
 
-gdb_test_multiple "core ${objdir}/${subdir}/gcore.test" \
-    "re-load generated corefile" {
-    -re ".* is not a core dump:.*$gdb_prompt $" {
-	fail "re-load generated corefile (bad file format)"
-	# No use proceeding from here.
-	return;	
-    }
-    -re ".*: No such file or directory.*$gdb_prompt $" {
-	fail "re-load generated corefile (file not found)"
-	# No use proceeding from here.
-	return;	
-    }
-    -re ".*Couldn't find .* registers in core file.*$gdb_prompt $" {
-	fail "re-load generated corefile (incomplete note section)"
-    }
-    -re "Core was generated by .*$gdb_prompt $" {
-	pass "re-load generated corefile"
-    }
+set core_loaded [gdb_core_cmd "$corefile" "re-load generated corefile"]
+if { $core_loaded == -1 } {
+    # No use proceeding from here.
+    return
 }
 
 gdb_test_sequence "where" "where in corefile" {
