@@ -125,37 +125,10 @@ if {"$core0file" != ""} {
 # Now restart gdb and load the corefile.
 clean_restart ${testfile}
 
-proc load_core { corefile } {
-    global gdb_prompt
-    global libthread_db_seen
-
-    gdb_test_multiple "core $corefile" \
-	"re-load generated corefile" {
-	    -re "\\\[Thread debugging using \[^ \r\n\]* enabled\\\]\r\n" {
-		exp_continue
-	    }
-	    -re " is not a core dump:.*\r\n$gdb_prompt $" {
-		fail "re-load generated corefile (bad file format)"
-		# No use proceeding from here.
-		return 0
-	    }
-	    -re ": No such file or directory.*\r\n$gdb_prompt $" {
-		fail "re-load generated corefile (file not found)"
-		# No use proceeding from here.
-		return 0
-	    }
-	    -re "Couldn't find .* registers in core file.*\r\n$gdb_prompt $" {
-		fail "re-load generated corefile (incomplete note section)"
-	    }
-	    -re "Core was generated by .*\r\n$gdb_prompt $" {
-		pass "re-load generated corefile"
-	    }
-	}
-    return 1
-}
-
 foreach name { corefile core0file } { with_test_prefix $name {
-    if ![load_core [subst $$name]] {
+    set core_loaded [gdb_core_cmd [subst $$name] "re-load generated corefile"]
+    if { $core_loaded == -1 } {
+	# No use proceeding from here.
 	continue
     }
 
