@@ -3176,6 +3176,49 @@ proc gdb_gcore_cmd {core test} {
     return $result
 }
 
+# Load core file CORE.  TEST is the name of the test case.
+# This will record a pass/fail for loading the core file.
+# Returns:
+#  1 - core file is successfully loaded
+#  0 - core file loaded but has a non fatal error
+# -1 - core file failed to load
+
+proc gdb_core_cmd { core test } {
+    global gdb_prompt
+
+    gdb_test_multiple "core $core" "re-load generated corefile" {
+	-re "\\\[Thread debugging using \[^ \r\n\]* enabled\\\]\r\n" {
+	    exp_continue
+	}
+	-re " is not a core dump:.*\r\n$gdb_prompt $" {
+	    fail "re-load generated corefile (bad file format)"
+	    return -1
+	}
+	-re ": No such file or directory.*\r\n$gdb_prompt $" {
+	    fail "re-load generated corefile (file not found)"
+	    return -1
+	}
+	-re "Couldn't find .* registers in core file.*\r\n$gdb_prompt $" {
+	    fail "re-load generated corefile (incomplete note section)"
+	    return 0
+	}
+	-re "Core was generated by .*\r\n$gdb_prompt $" {
+	    pass "re-load generated corefile"
+	    return 1
+	}
+	-re ".*$gdb_prompt $" {
+	    fail "re-load generated corefile"
+	    return -1
+	}
+	timeout {
+	    fail "re-load generated corefile (timeout)"
+	    return -1
+	}
+    }
+    fail "unsupported output from 'core' command"
+    return -1
+}
+
 # Return the filename to download to the target and load on the target
 # for this shared library.  Normally just LIBNAME, unless shared libraries
 # for this target have separate link and load images.
